// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebpackConfigHelper getCommon sends proper stuff depending on isDev 1`] = `
Object {
  "context": "/foo/bar",
  "devtool": "source-map",
  "externals": Object {
    "jquery": "jQuery",
  },
  "infrastructureLogging": Object {
    "level": "none",
  },
  "mode": "production",
  "name": "config1",
  "target": "web",
  "watch": false,
}
`;

exports[`WebpackConfigHelper getCommon sends proper stuff depending on isDev 2`] = `
Object {
  "context": "/foo/bar",
  "devtool": "cheap-module-source-map",
  "externals": Object {
    "jquery": "jQuery",
  },
  "infrastructureLogging": Object {
    "level": "none",
  },
  "mode": "development",
  "name": "config1",
  "target": "web",
  "watch": true,
}
`;

exports[`WebpackConfigHelper getPlugins has proper plugins for build mode 1`] = `
Array [
  DefinePlugin {
    "definitions": Object {
      "__WPACKIO__": Object {
        "appName": "\\"wpackio\\"",
        "outputPath": "\\"dist\\"",
      },
      "process.env.BABEL_ENV": "\\"production\\"",
      "process.env.NODE_ENV": "\\"production\\"",
    },
  },
  CleanWebpackPlugin {
    "apply": [Function],
    "cleanAfterEveryBuildPatterns": Array [],
    "cleanOnceBeforeBuildPatterns": Array [
      "/foo/bar/dist/config1",
    ],
    "cleanStaleWebpackAssets": true,
    "currentAssets": Array [],
    "dangerouslyAllowCleanPatternsOutsideProject": false,
    "dry": false,
    "handleDone": [Function],
    "handleInitial": [Function],
    "initialClean": false,
    "outputPath": "",
    "protectWebpackAssets": true,
    "removeFiles": [Function],
    "verbose": false,
  },
  MiniCssExtractPlugin {
    "_sortedModulesCache": WeakMap {},
    "options": Object {
      "chunkFilename": "config1/[name]-[contenthash:8].css",
      "experimentalUseImportModule": false,
      "filename": "config1/[name]-[contenthash:8].css",
      "ignoreOrder": false,
    },
    "runtimeOptions": Object {
      "attributes": undefined,
      "insert": undefined,
      "linkType": "text/css",
    },
  },
  Object {},
  DependencyExtractionWebpackPlugin {
    "assetDependenciesData": Array [],
    "compiler": null,
    "externalizedDeps": Set {},
    "externalsPlugin": ExternalsPlugin {
      "externals": [Function],
      "type": "window",
    },
    "options": Object {
      "appDir": "config1",
      "gutenbergOptimized": false,
    },
  },
  BannerPlugin {
    "banner": [Function],
    "options": Object {
      "banner": "
WordPress WebPack Bundler

@author Swashata Ghosh
@version 1.0.0
@link https://wpack.io
@license GPL-3.0

Copyright (c) 2018 Swashata Ghosh

This software is released under the GPL-3.0 License
https://opensource.org/licenses/GPL-3.0

Compiled with the help of https://wpack.io
A zero setup Webpack Bundler Script for WordPress",
      "entryOnly": false,
      "include": /\\\\\\.\\(\\(t\\|j\\)sx\\?\\|s\\?\\(c\\|a\\)ss\\)\\$/,
      "raw": false,
    },
  },
]
`;

exports[`WebpackConfigHelper getPlugins has proper plugins for dev mode 1`] = `
Array [
  TimeFixPlugin {
    "watchOffset": 11000,
  },
  DefinePlugin {
    "definitions": Object {
      "__WPACKIO__": Object {
        "appName": "\\"wpackio\\"",
        "outputPath": "\\"dist\\"",
      },
      "process.env.BABEL_ENV": "\\"development\\"",
      "process.env.NODE_ENV": "\\"development\\"",
    },
  },
  CleanWebpackPlugin {
    "apply": [Function],
    "cleanAfterEveryBuildPatterns": Array [],
    "cleanOnceBeforeBuildPatterns": Array [
      "/foo/bar/dist/config1",
    ],
    "cleanStaleWebpackAssets": true,
    "currentAssets": Array [],
    "dangerouslyAllowCleanPatternsOutsideProject": false,
    "dry": false,
    "handleDone": [Function],
    "handleInitial": [Function],
    "initialClean": false,
    "outputPath": "",
    "protectWebpackAssets": true,
    "removeFiles": [Function],
    "verbose": false,
  },
  MiniCssExtractPlugin {
    "_sortedModulesCache": WeakMap {},
    "options": Object {
      "chunkFilename": "config1/[name].css",
      "experimentalUseImportModule": false,
      "filename": "config1/[name].css",
      "ignoreOrder": false,
    },
    "runtimeOptions": Object {
      "attributes": undefined,
      "insert": undefined,
      "linkType": "text/css",
    },
  },
  Object {},
  DependencyExtractionWebpackPlugin {
    "assetDependenciesData": Array [],
    "compiler": null,
    "externalizedDeps": Set {},
    "externalsPlugin": ExternalsPlugin {
      "externals": [Function],
      "type": "window",
    },
    "options": Object {
      "appDir": "config1",
      "gutenbergOptimized": false,
    },
  },
  HotModuleReplacementPlugin {
    "fullBuildTimeout": 200,
    "multiStep": undefined,
    "options": Object {},
    "requestTimeout": 10000,
  },
  WatchMissingNodeModulesPlugin {
    "nodeModulesPath": "/foo/bar/node_modules",
  },
]
`;
